--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
+    "dev": "nodemon --exec tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,11 +14,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
-    "express": "^5.1.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   }
 }
