Integrate BetterAuth with MailerSend for email verification and password reset

--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@better-auth/cli": "^1.2.7",
+    "better-auth": "^1.2.7",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
+    "mailersend": "^2.5.0",
     "mysql2": "^3.14.0"
   },
   "devDependencies": {
